# effective_mobile_test_task_solution

./: .env  Dockerfile  README.md  boot.sh  config.py  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml
effective_mobile_task/: __init__.py  containers.py  create_app.py  dto.py  exceptions.py  middleware.py  models.py  repositories.py  routes.py  schemas.py  services.py  utils.py
migrations/versions/: 60f3b5a74aa3_.py  f11ed63062fb_.py
scripts/: dev.py
